<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">TeleConsole</string>
    <string name="process_name" translatable="false">TeleConsole_SIP</string>
    <string name="login_error">Bad username or password</string>
    <string name="malformed_error">Response is not in JSON format, this might be because of your filter</string>
    <string name="no_phones_error">This user does not have any phone lines attached to it. Please contact TeleBroad support to setup your account.</string>
    <string name="telebroad_logo">Telebroad Logo</string>
    <string name="please_wait_one_moment">Please wait one moment</string>
    <string name="checking_your_credentials">Verifying your user name and password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="base_url" translatable="false">https://webserv.telebroad.com/api/teleconsole/rest</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="teleconsole">TeleConsole</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="unable_to_login">Unable to log in</string>
    <string name="default_username" translatable="false" />
    <string name="default_password" translatable="false" />
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="messages">Messages</string>
    <string name="call_history">Call History</string>
    <string name="contacts">Contacts</string>
    <string name="dial_pad">Dial Pad</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="do_not_disturb">Do Not Disturb</string>
    <string name="do_not_disturb_phone_banner">Phone is on Do Not Disturb</string>
    <string name="do_not_disturb_teleconsole_banner">TeleConsole is on Do Not Disturb</string>
    <string name="documents">Documents</string>
    <string name="logout">Log Out</string>
    <string name="dial_nine">dial nine</string>
    <string name="mute">Mute</string>
    <string name="dialpad">Dialpad</string>
    <string name="speaker">Speaker</string>
    <string name="switch_title">Switch</string>
    <string name="forward">Transfer</string>
    <string name="forward_fax">Forward Fax</string>
    <string name="hold">Hold</string>
    <string name="add_call">Add Call</string>
    <string name="record">Record</string>
    <string name="conference">Conference</string>
    <string name="hide">Hide</string>
    <string name="hangup">Hang up</string>
    <string name="decline">Decline</string>
    <string name="answer">Answer</string>
    <string name="incoming_call">Incoming Call Ringing</string>
    <string name="title_activity_second_call">SecondCallActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="emergency_dialog_title">Emergency Numbers</string>
    <string name="emergency_dialog_message">According to our terms and conditions, you may not use our softphone to dial an emergency number. Would you like to call using your phone?</string>
    <string name="emergency_dialog_call">Call</string>
    <string name="emergency_dialog_cancel">Cancel</string>
    <string name="section_format">Coming soon section: %1$d</string>
    <string name="no_phones">No Phones</string>
    <string name="disabled_user">Disabled User</string>
    <string name="contact_button_title">CONTACT NOW</string>
    <string name="cancel">Cancel</string>
    <string name="domain">push.telebroad.com</string>
    <string name="telebroad_support_number">12124449911</string>
    <string name="com.pubnub.publishKey" translatable="false" tools:ignore="ExtraTranslation">pub-c-82403925-3c5f-466f-a67b-8faef7d9492d</string>
    <string name="com.pubnub.subscribeKey" translatable="false" tools:ignore="ExtraTranslation">sub-c-57712b5e-05ae-11e4-aac6-02ee2ddab7fe</string>
    <string name="com.pubnub.secretKey" translatable="false" tools:ignore="ExtraTranslation">sec-c-NjM3NDgyYjEtYjY2Zi00N2I5LThmMWEtN2I2MjFkZTY1ZTY2</string>
    <string name="unknown">Unknown</string>
    <string name="company">Company</string>
    <string name="personal">Personal</string>
    <string name="loading">Loading…</string>
    <string name="all_contacts">All Contacts</string>
    <string name="mobile">Mobile</string>
    <string name="all">All</string>
    <string name="search_contacts">Search Contacts</string>
    <string name="corporate">Corporate</string>
    <string name="profile_pic">profile picture</string>
    <string name="ext">Ext.</string>
    <string name="sip">SIP</string>
    <string name="error_fetching_token">Error Fetching Token</string>
    <string name="registered">Online</string>
    <string name="not_registered">Offline</string>
    <string name="user_name">User Name</string>
    <string name="ext_xxxx_sip_xxxxxxxxx">Ext. xxxx SIP xxxxxxx</string>
    <string name="registration_loading">Registration Loading</string>
    <string name="logout_with_param">Logout %1$s</string>
    <string name="filterTitle">Filter</string>
    <string name="missed_calls">Missed Calls</string>
    <string name="incoming_calls">Incoming Calls</string>
    <string name="outgoing_calls">Outgoing Calls</string>
    <string name="all_calls">All Calls</string>
    <string name="search_calls">Search Calls</string>
    <string name="in_conf">In Conference</string>
    <string name="switch_dialog_title">Switch Call to Phone</string>
    <string name="switch_dialog_message">The call will be redirected to your mobile phone, Your phone will ring, Pick up to continue the call. This may take up to 10 seconds</string>
    <string name="switch_dialog_button">Switch Call</string>
    <string name="invalid_phone_number">Not a valid phone number</string>
    <string name="android_permissions">Android Permissions</string>
    <string name="mic_permissions"><b>TeleConsole</b> will ask you for access to use your <b>microphone</b> so you will be able to talk into the phone</string>
    <string name="phone_permission"><b>TeleConsole</b> will ask for access to your <b>Phone</b> so you will be able to place and receive calls</string>
    <string name="file_permissions"><b>TeleConsole</b> will ask for access to your <b>File System</b> so you can download voicemails and faxes</string>
    <string name="contacts_permission"><b>TeleConsole</b> will ask for access to your <b>Contacts</b> so you can use them from the app</string>
    <string name="bluetooth_permission"><b>TeleConsole</b> will ask for access to <b>Nearby Devices</b> so that you should be able to connect to <b>Bluetooth</b></string>
    <string name="start_asking">Start Asking</string>
    <string name="phone_number">Phone Number</string>
    <string name="delete_chat_team">Are you sure you want to delete the team?<strong> All data will be lost</strong></string>
    <string name="waiting">Waiting</string>
    <string name="incoming">Incoming</string>
    <string name="connecting">Connecting</string>
    <string name="ringing">Ringing</string>
    <string name="connected">Connected</string>
    <string name="holding">Holding</string>
    <string name="on_hold">On Hold</string>
    <string name="resuming">Resuming</string>
    <string name="finished">Finished</string>
    <string name="all_messages">All Messages</string>
    <string name="fax">Fax</string>
    <string name="sms_messages">SMS Messages</string>
    <string name="voicemail">Voicemail</string>
    <string name="send_sms">Send SMS</string>
    <string name="call">Call</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="ringtone_both">Ring &amp; Vibrate</string>
    <string name="voip_key">VoIP</string>
    <string name="medium">MEDIUM</string>
    <string name="voip_always">Always</string>
    <string name="channels">Channels</string>
    <string name="notifications">Notifications</string>
    <string name="local_settings">Local Settings</string>
    <string name="general">General</string>
    <string name="default_sms_title">Default SMS Number</string>
    <string name="default_sms_summary">Choose which SMS number a SMS message should be sent from by default</string>
    <string name="caller_id_summary">Choose which caller ID to show when making phone calls</string>
    <string name="caller_id_title">Caller ID</string>
    <string name="phone_line">Phone Line</string>
    <string name="phone_line_summary">Choose which extension you want to make and receive calls on</string>
    <string name="forward_summary_negative">Calls are not being forwarded</string>
    <string name="forward_title">Forward calls</string>
    <string name="voip_title">VoIP Settings</string>
    <string name="voip_summary">Choose when to use data (VoIP) and when to use cellular voice</string>
    <string name="call_quality_title">Call Quality</string>
    <string name="call_quality_summary">Higher Call Quality uses more data, and might cause calls to be choppy in low data areas.</string>
    <string name="system_settings_title">Android Settings</string>
    <string name="system_settings_summary">Change System settings for this app</string>
    <string name="cell_number_title">Device Phone Number</string>
    <string name="cell_number_summary">Set your phone number</string>
    <string name="cell_number_key">Cell Phone Number</string>
    <string name="ring_volume_key">ring.volume</string>
    <string name="ring_volume_title">Ringtone Type</string>
    <string name="ring_volume_summary">Set ringtone to vibrate, ringing, both, or silent</string>
    <string name="files">Files</string>
    <string name="mark_all_as_read">Mark all as Read</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="direct_calls_only">Ignore Group Calls</string>
    <string name="add_contact">Add to Contacts</string>
    <string name="view_contact">View Contact</string>
    <string name="no_account_label">Don\'t Have an Account?</string>
    <string name="signup_button_title">Sign Up</string>
    <string name="upload_logs">Upload Logs</string>
    <string name="block_number">Block Number</string>
    <string name="mark_conversation_as_unread">Mark as unread</string>
    <string name="microsoft_login">Sign In With Microsoft</string>
    <string name="sign_in_with_telebroad">Sign In With Telebroad</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="or_sign_in_using_your_username_and_password">Or sign in using your Username and Password</string>
    <string name="sign_in_with_partners">Sign in with Google Or Microsoft</string>
    <string name="calls">Calls</string>
</resources>