<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_messages"
        android:title="@string/messages"
        app:showAsAction="always|withText"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/navigation_callhistory"
        android:icon="@drawable/ic_call_color_primary"
        android:title="@string/calls"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_contacts"
        android:icon="@drawable/ic_contacts"
        android:title="@string/contacts"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_dialpad"
        android:icon="@drawable/ic_dialpad"
        android:title="@string/dial_pad"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="always|withText"
/>

</menu>
