<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        app:showAsAction="always"
        android:icon="@drawable/ic_delete_black"
        android:orderInCategory="100"/>
    <item
        android:id="@+id/call"
        android:title="@string/call"
        android:icon="@drawable/ic_call_black"
        app:showAsAction="ifRoom"
        android:orderInCategory="200"
        />

    <item
        android:id="@+id/text"
        android:title="@string/send_sms"
        android:icon="@drawable/ic_sms_black"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/viewContact"
        android:icon="@drawable/ic_person_black"
        android:orderInCategory="350"
        android:title="@string/view_contact"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/share"
        android:title="@string/share"
        android:orderInCategory="375"
        app:showAsAction="never"/>
    <!--item
        android:id="@+id/download"
        android:title="@string/download"
        app:showAsAction="never"
        android:orderInCategory="400"/-->

</menu>