<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        app:showAsAction="always"
        android:icon="@drawable/ic_delete_black"
        android:orderInCategory="200"/>
    <item
        android:id="@+id/copy"
        android:title="@string/copy"
        app:showAsAction="always"
        android:orderInCategory="100"
        android:iconTint="@color/black"
        android:icon="@drawable/ic_baseline_content_copy_24"/>
    <item android:id="@+id/share"
        android:icon="@drawable/ic_menu_share"
        app:showAsAction="always"
        android:title="share"
        android:iconTint="@color/black"/>
    <item android:id="@+id/download"
        app:showAsAction="always"
        android:title="@string/download"
        android:iconTint="@color/black"
        android:icon="@drawable/ic_download_black"/>
</menu>