<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:background="@color/colorPrimaryDarkAdaptable"
    tools:context=".controller.login.SignInActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="80dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/telebroad_logo"
        app:tint="@color/colorPrimaryDarkAdaptableInverse" />

    <TextView
        android:id="@+id/line_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:text="@string/teleconsole"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textColor="@color/colorPrimaryDarkAdaptableInverse"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/microsoft_button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_ms_login_btn"
        android:drawableStart="@drawable/ms_logo"
        android:drawablePadding="12dp"
        android:paddingStart="6dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/microsoft_login"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/google_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/google_button"
        app:layout_constraintTop_toBottomOf="@id/google_button"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/google_button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/bg_google_login_btn"
        android:drawableStart="@drawable/google_logo"
        android:drawablePadding="12dp"
        android:paddingStart="6dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:text="@string/sign_in_with_google"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView34"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/telebroad_button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_google_login_btn"
        android:backgroundTint="@color/colorPrimaryDarkAdaptableInverse"
        android:text="@string/sign_in_with_telebroad"
        android:textColor="@color/colorPrimaryDarkAdaptable"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView33"
        app:layout_constraintEnd_toEndOf="@id/google_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/google_button" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/or_sign_in_using_your_username_and_password"
        android:textColor="@color/colorPrimaryDarkAdaptableInverse"
        app:layout_constraintBottom_toTopOf="@+id/telebroad_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/no_account_label"
        android:textColor="@color/colorPrimaryDarkAdaptableInverse"
        app:layout_constraintBottom_toTopOf="@+id/signupButtonSi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signupButtonSi"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/bg_google_login_btn"
        android:backgroundTint="@color/colorPrimaryDarkAdaptableInverse"
        android:textColor="@color/colorPrimaryDarkAdaptable"
        android:text="@string/signup_button_title"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/telebroad_button"
        app:layout_constraintStart_toStartOf="@+id/telebroad_button" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/sign_in_with_partners"
        android:textColor="@color/colorPrimaryDarkAdaptableInverse"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_info" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="-141dp" />
</androidx.constraintlayout.widget.ConstraintLayout>